--- a/public/index.html
+++ b/public/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="">
-        <meta name="author" content="">    
-    <!--
+	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="description" content="" />
+		<meta name="author" content="" />
+		<!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <style type="text/css">
-        .navbar-nav.navbar-center {
-            position: absolute;
-            left: 50%;
-            transform: translatex(-50%);
-        }
-    </style>
-    <!--
+		<style type="text/css">
+			.navbar-nav.navbar-center {
+				position: absolute;
+				left: 50%;
+				transform: translatex(-50%);
+			}
+		</style>
+		<!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -26,12 +26,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Autographa Live</title>
-    <link rel="icon" href="../../favicon.ico" />
+		<title>Autographa Live</title>
+		<link rel="icon" href="../../favicon.ico" />
 		<link rel="stylesheet" href="./loader.css" />
-  </head>
-  <body>
-    <div id="root">
+	</head>
+	<body style="margin: 0px;">
+		<div id="root">
 			<div id="app">
 				<div id="loader-wrapper">
 					<div id="loader"></div>
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 		</div>
-    <!--
+		<!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -50,14 +50,14 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script>
-      if (typeof module === 'object') {
-          window.module = module;
-          module = undefined;
-      }
-    </script>
-    <script>
-      if (window.module) module = window.module;
-    </script>
-  </body>
+		<script>
+			if (typeof module === 'object') {
+				window.module = module;
+				module = undefined;
+			}
+		</script>
+		<script>
+			if (window.module) module = window.module;
+		</script>
+	</body>
 </html>
